# WizardHTML

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml
docs_source/: conf.py  index.rst  requirements.txt
docs_source/_static/: LICENSE
docs_source/_static/css/: custom.css
test/test_cleaner_html/: test_html.py
test/test_tokenizer_html/: test_tokenizer.py  test_tree_construction.py
test/test_tokenizer_html/test_tokenizer/: domjs.test  test3.test  xmlViolation.test
test/test_wildcard/: test_wildcard.py
wizardhtml/: __init__.py  wizard_html.py
wizardhtml/utils/: wildcard.py
wizardhtml/utils/tw_html_parser/: _utils.py  beautify_html.py  dom.py  entities_hash.c  entities_hash.h  entities_wrapper.pyx  error.py  generate_gperf.py  html_to_md_dom.py  parser.py  serializer.py  serializer_pretty.py  tokenizer.py  tokens.py
wizardhtml/wizard_cleaners/tw_html_cleaner/: constants.py  html_cleaner.py
